<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ball"
        android:scaleType="centerCrop"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal"
        android:id="@+id/top_layout">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/versus"
            android:scaleType="centerCrop"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"/>
    <EditText
        android:id="@+id/editText_teamA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textSize="25sp"
        android:inputType="textCapWords"
        android:gravity="center"
        android:hint="@string/team_1"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="63dp"/>

    <EditText
        android:id="@+id/editText_teamB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textSize="25sp"
        android:inputType="textCapWords"
        android:gravity="center"
        android:layout_alignParentRight="true"
        android:layout_marginRight="45dp"
        android:layout_marginTop="63dp"
        android:hint="@string/team_2"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/top_layout"
        android:padding="16dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/winScore"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/editText_score"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingLeft="8dp"
        android:gravity="center"
        android:paddingRight="8dp"
        android:inputType="number"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoring"
        android:layout_marginBottom="8dp"/>

    <RadioGroup
        android:id="@+id/radiogroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">
        <RadioButton
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/pointSystem1"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pointSystem2"/>
    </RadioGroup>

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/matchType"
        android:layout_marginBottom="8dp"/>
    <RadioGroup
        android:id="@+id/radiogroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">
        <RadioButton
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/setType"
        android:onClick="setRules"/>
        <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switchType"
        android:onClick="switchRules"/>
    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/allSet"
        android:onClick="readInfo"
        android:padding="20dp"/>
    </LinearLayout>

</RelativeLayout>