<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/court2"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.courtcounter.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/team_a_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/light_gray"
            android:orientation="vertical">

            <TextView
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                style="@style/textview_style"
                android:text="@string/team_A"
                android:textColor="@color/dark_gray"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/winner_a"
                style="@style/textview_style"
                android:layout_marginBottom="@dimen/score_margin"
                android:text="@string/winner"
                android:textAllCaps="true"
                android:textSize="@dimen/winner_textsize" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_marginBottom="@dimen/score_margin"
                style="@style/textview_style"
                android:text="@string/startingScore"
                android:textColor="@android:color/black"
                android:textSize="@dimen/winner_textsize" />

            <Button
                android:id="@+id/team_a_2pt"
                style="@style/button_style"
                android:layout_marginBottom="@dimen/score_margin"
                android:layout_marginTop="24dp"
                android:onClick="scoreTwoTeamA"
                android:text="@string/twopointer"
                android:textSize="@dimen/button_textsize"/>

            <Button
                android:id="@+id/team_a_1pt"
                style="@style/button_style"
                android:layout_marginBottom="@dimen/score_margin"
                android:onClick="scoreOneTeamA"
                android:textSize="@dimen/button_textsize"
                android:text="@string/onepointer" />

            <Button
                android:id="@+id/team_a_rb"
                style="@style/button_style"
                android:layout_marginBottom="@dimen/score_margin"
                android:onClick="rebound"
                android:textSize="@dimen/button_textsize"
                android:text="@string/rebound" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/team_b_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/team_B"
                style="@style/textview_style"
                android:textColor="@color/dark_gray"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/winner_b"
                style="@style/textview_style"
                android:layout_marginBottom="@dimen/score_margin"
                android:text="@string/winner"
                android:textAllCaps="true"
                android:textSize="@dimen/winner_textsize" />

            <TextView
                android:id="@+id/team_b_score"
                style="@style/textview_style"
                android:layout_marginBottom="@dimen/score_margin"
                android:text="@string/startingScore"
                android:textColor="@android:color/black"
                android:textSize="@dimen/winner_textsize" />

            <Button
                android:id="@+id/team_b_2pt"
                style="@style/button_style"
                android:layout_marginBottom="@dimen/score_margin"
                android:layout_marginTop="24dp"
                android:onClick="scoreTwoTeamB"
                android:textSize="@dimen/button_textsize"
                android:text="@string/twopointer" />

            <Button
                android:id="@+id/team_b_1pt"
                style="@style/button_style"
                android:layout_marginBottom="@dimen/score_margin"
                android:textSize="@dimen/button_textsize"
                android:onClick="scoreOneTeamB"
                android:text="@string/onepointer" />

            <Button
                android:id="@+id/team_b_rb"
                style="@style/button_style"
                android:layout_marginBottom="@dimen/score_margin"
                android:textSize="@dimen/button_textsize"
                android:onClick="rebound"
                android:text="@string/rebound" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:paddingBottom="20dp"
        android:paddingLeft="50dp"
        android:paddingRight="30dp"
        android:paddingTop="30dp"
        android:background="@color/dark_gray">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:onClick="resetScore"
            android:textSize="@dimen/button_textsize"
            android:text="@string/reset" />

    </RelativeLayout>

</LinearLayout>
